--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.5.2",
+    "node-uuid": "^1.4.7",
     "npm-install-webpack-plugin": "4.0.0",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.7",
@@ -55,6 +56,7 @@
   },
   "dependencies": {
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "uuid": "^2.0.2"
   }
 }
